# clearml-hydra-template

./: .gitignore  LICENSE  README.md  pyproject.toml  run_main.sh
configs/: __init__.py  config.py
src/: main.py
